Fixed z-index issue with modal.

--- a/assets/scss/lightbox.scss
+++ b/assets/scss/lightbox.scss
@@ -7,6 +7,7 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.9);
   display: block;
+  z-index: 1000000000;
 
   animation: fade-in 0.4s;
 }
